chore: bump versions and update example app
Bump package versions:
- @0xbigboss/polygen-codegen: 0.1.1 → 0.1.4
- @0xbigboss/polygen-cli: 0.1.1 → 0.1.4
- @0xbigboss/polygen: 0.1.2 → 0.1.10

Other changes:
- Update CHANGELOGs with release notes
- Fix README package name references (@0xbigboss → @callstack)
- Fix example app gradle configuration for Kotlin jvmTarget
- Add gradle property to disable Java version alignment
- Update example app iOS Podfile.lock
- Remove consumed changesets

--- a/apps/example/android/gradle.properties
+++ b/apps/example/android/gradle.properties
@@ -43,6 +43,9 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 #newArchEnabled=true
 #bridgelessEnabled=true
 
+# Prevent React Native Gradle plugin from overwriting Kotlin/Java toolchains.
+react.internal.disableJavaVersionAlignment=true
+
 # Uncomment the line below to build React Native from source.
 #react.buildFromSource=true
 
