--- a/apps/example/android/build.gradle
+++ b/apps/example/android/build.gradle
@@ -45,6 +45,12 @@ allprojects {
 
 // Configure React plugin when applied in subprojects (e.g., :app module)
 subprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
+
     plugins.withId("com.facebook.react") {
         react {
             bundleCommand = "webpack-bundle"
